update testi, image, dan icon

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <section class="section hero"></section>
       </div>
       <div class="image-container">
-        <img src="assets/img/window2.webp" alt="image" />
+        <img src="assets/img/window6.webp" alt="image" />
       </div>
     </div>
     <!-- Scrolling Zoom -->
@@ -524,7 +524,7 @@
     </section>
     <!-- /Services Section -->
 
-   <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container">
         <div class="row">
@@ -547,6 +547,102 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXrAuc046lqihskIB3X9KFCPj6pBB1wWLZstlN1sVh8lwrRxTY=w72-h72-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-3" />
+                      <h3>Marta Fitria Irawati</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                       I never thought I could improve my speaking skills. I actually underestimated myself at first, and it seemed like it would be difficult.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> But I was given relevant tips and lessons, so I could easily apply them and they helped me hone my speaking skills to be better and more structured. Thank you, Dialogika🫶🏻
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXxRWA08N6rk_ppQMDZNa0P81yy2C9Z1NK85RlBHnvAA9rHY08D=w75-h75-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-4" />
+                      <h3>Salsabila Athirah Melisani Zahra</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>I just took a Public Speaking class at
+                        Dialogika, and this experience really changed the way I speak in public. Before taking the
+                        class, I often felt nervous and lacked confidence when I had to speak in front of many people.
+                        However, after attending the sessions given, I gained a lot of valuable insights that I can
+                        immediately apply.
+                        <span class="dots">...</span><span class="readMore"> Read
+                          More
+                          &raquo;</span>
+                        <span class="moreText"> What I like about this class is the interactive and practical approach.
+                          The material is not only theory, but also lots of hands-on exercises, simulations, and
+                          constructive feedback from very experienced mentors. The class atmosphere is also comfortable
+                          and supportive, making me more courageous to try.
+                          <br />
+                          In addition, the mentors at Dialogi are truly professional and experienced in their fields.
+                          They not only provide effective speaking techniques but also guide participants in building
+                          self-confidence. I also got tips on how to overcome nervousness, control intonation, and
+                          convey messages more clearly.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjU1HmboXJ5vwV0GRCaLzP3QrgBjb3d_zjlWbvCsZObWgkS7qks-CQ=w65-h65-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Rita Risnawati</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        This activity is very good for those who want to develop their career and increase their confidence in public speaking, the mentor, Rafel, is good, <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">The material presented is also easy to understand and the response to the participants is also good, hopefully the mentor and team will always be successful....</span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
@@ -597,34 +693,6 @@
                   </div>
                 </div>
                 <!-- End testimonial item -->
-                  <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWjlvlSeZ8DJz0WOOoEHjUgv7kZua-lUOGgIVDVQab1OpqMaD_Pgw=w65-h65-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-3" />
-                      <h3>Aisyah Khairani Hanif Aqilla</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I really enjoyed taking public speaking lessons at Dialogika. The classrooms are comfortable with air conditioning, and the instructors are communicative. Of course, the children learned happily and had fun, plus they got to meet new, like-minded friends. Great job
-                        <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText"> Thank you, Ms. Niken, MBK Ais has become more confident and her public speaking has become more fluent 💐💐
-                        </span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                 <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
@@ -773,108 +841,7 @@
                   </div>
                 </div>
                 <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWYCorNCNo7nv-RWgMH-I0rdtmf4ozZUzikPvwrNpzpKm4bPZY3=w72-h72-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-3" />
-                      <h3>Aris Kurniawan </h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        My child really likes to participate in activities at Dialogika. The mentor is very helpful in
-                        the development of the child, parents can discuss as much as they want about the development of
-                        the child.
-                        <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText"> Here the psychological aspect of the child's development is very much
-                          considered. Ms. Malla as a mentor really understands the psychology of children, and can give
-                          suggestions, what can be done in the future to help the development of the child. Very helpful
-                          to increase parents' insight in parenting children.
-                        </span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXxRWA08N6rk_ppQMDZNa0P81yy2C9Z1NK85RlBHnvAA9rHY08D=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-4" />
-                      <h3>Salsabila Athirah Melisani Zahra</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>I just took a Public Speaking class at
-                        Dialogika, and this experience really changed the way I speak in public. Before taking the
-                        class, I often felt nervous and lacked confidence when I had to speak in front of many people.
-                        However, after attending the sessions given, I gained a lot of valuable insights that I can
-                        immediately apply.
-                        <span class="dots">...</span><span class="readMore"> Read
-                          More
-                          &raquo;</span>
-                        <span class="moreText"> What I like about this class is the interactive and practical approach.
-                          The material is not only theory, but also lots of hands-on exercises, simulations, and
-                          constructive feedback from very experienced mentors. The class atmosphere is also comfortable
-                          and supportive, making me more courageous to try.
-                          <br />
-                          In addition, the mentors at Dialogi are truly professional and experienced in their fields.
-                          They not only provide effective speaking techniques but also guide participants in building
-                          self-confidence. I also got tips on how to overcome nervousness, control intonation, and
-                          convey messages more clearly.
-                        </span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjU1HmboXJ5vwV0GRCaLzP3QrgBjb3d_zjlWbvCsZObWgkS7qks-CQ=w65-h65-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-6" />
-                      <h3>Rita Risnawati</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        This activity is very good for those who want to develop their career and increase their confidence in public speaking, the mentor, Rafel, is good, <span
-                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
-                        <span class="moreText">The material presented is also easy to understand and the response to the participants is also good, hopefully the mentor and team will always be successful....</span><span class="readLess"> &laquo; Read Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-
+                
 
               </div>
               <div class="swiper-pagination"></div>
