--- a/index.html
+++ b/index.html
@@ -552,6 +552,58 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUcMakqN0FT5qg74Xn6cfDSYyOl6D5whj9gCcGv1zuFTlUNN7_b=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Kaori Azzahra</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        This public speaking course has completely transformed my communication skills. I used to dread speaking in front of a crowd, <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">but now I confidently express my ideas. The practical exercises and constructive feedback have boosted my self-assurance, making me a more effective communicator. </span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+                                
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9eqvpuQLAHcSlvQgmSfykv04ENJje8X0sSjdcCPVHAUZ08OM=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>DivaNorberta Sofianova</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The place is comfortable The room is air-conditioned so it's cool, the classroom for learning is also comfortable and like a regular classroom.The mentors are very good, <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">their teaching methods are fun and exciting, but the material that is delivered reaches us well.... actually there are still many things that I want to say. But that's all...anyway good luck 🤗 </span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjWBk2Ofep3uTfDTm9t0Ii7PYOs-m9wBgydV-cq8yprsO3wTGXkH=w90-h90-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-5" />
                       <h3>Fathi Suwigyo</h3>
