update poto, emote, dan testi di web promo

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
   <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGK9D6H" height="0" width="0"
+    <iframe src="../promo/assets/img/image.png" height="0" width="0"
       style="display: none; visibility: hidden"></iframe> </noscript><!-- End Google Tag Manager (noscript) -->
 
   <!-- ======= Top Bar, Header, Side Bar ======= -->
@@ -547,6 +547,84 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWAPrNe7lYwECnwT-oSPQl8iTgfM_VZXghOsVZoLBkbVOUO7jSS=w90-h90-p-rp-mo-ba2-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Ayu Lestari</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        For those who have difficulty speaking, I highly recommend this class. The mentors help you with everything from problem-solving to problem-solving.<span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">It's truly helpful and worth it. To Sabil, thank you so much for being my mentor. I've become more confident after taking your class.</span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->                
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9in0JsfmI1jW8u2YpZTSsM-rl2JO3vOVMfNQrP4943XKzZet0=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Almaas Tifani</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Before taking the public speaking class at Dialogika, I felt like my public speaking skills were a mess. However, after attending each session, I learned a lot, from vocal techniques and intonation management to body language and confidence-building strategies.<span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText"> The instructors were very communicative, provided constructive feedback, and provided plenty of practice exercises so I could practice right away. Now I feel much more confident and better prepared for presentations and public speaking. In my opinion, studying at Dialogika is highly recommended for anyone looking to improve.</span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXFYvjhI1OdJV7CoPEc4IhHJH28p2uRZXpmM3u-xsUvYLIlETs=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Quinza Aleysia Giselda Kurniawan</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        After joining the Dialogue class, I became more courageous in coming forward to the class, especially during presentations. <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">The teachers who taught were very friendly and patient in teaching public speaking techniques from the basics, and my friends were also very fun and enjoyable.</span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
