--- a/index.html
+++ b/index.html
@@ -552,6 +552,37 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUpF8BCTYPpxylRqclEB-IZfFLDg2Sb044A-g8InQZYS-M-TSqA=w36-h36-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Almaas Tifani</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        It was beyond my expectations. I thought it would be full of boring theories, but it wasn’t at
+                        all. The material was concise, yet easy to understand.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> Each session ended with practice and personalized feedback from the
+                          mentor, which was a big plus. It’s perfect for anyone looking to upgrade themselves.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjWAPrNe7lYwECnwT-oSPQl8iTgfM_VZXghOsVZoLBkbVOUO7jSS=w90-h90-p-rp-mo-ba2-br100"
                         class="testimonial-img" alt="testimoni-6" />
                       <h3>Ayu Lestari</h3>
@@ -578,7 +609,7 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9in0JsfmI1jW8u2YpZTSsM-rl2JO3vOVMfNQrP4943XKzZet0=w90-h90-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9in0JsfmI1jW8u2YpZTSsM-rl2JO3vOVMfNQrP4943XKzZet0=w72-h72-p-rp-mo-br100
                         class="testimonial-img" alt="testimoni-6" />
                       <h3>Almaas Tifani</h3>
                       <h4>
@@ -964,37 +995,6 @@
                         </span><span class="readLess"> &laquo; Read
                           Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUpF8BCTYPpxylRqclEB-IZfFLDg2Sb044A-g8InQZYS-M-TSqA=w36-h36-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-2" />
-                      <h3>Nanik Kusuma </h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        It was beyond my expectations. I thought it would be full of boring theories, but it wasn’t at
-                        all. The material was concise, yet easy to understand.
-                        <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText"> Each session ended with practice and personalized feedback from the
-                          mentor, which was a big plus. It’s perfect for anyone looking to upgrade themselves.
-                        </span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
                   </div>
