--- a/index.html
+++ b/index.html
@@ -552,6 +552,62 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXFYvjhI1OdJV7CoPEc4IhHJH28p2uRZXpmM3u-xsUvYLIlETs=w72-h72-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Quinza Aleysia Giselda Kurniawan</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        After joining the Dialogue class, I became more courageous in coming forward to the class, especially during presentations. <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">After joining the Dialogue class, I became more courageous in coming forward to the class, especially during presentations. </span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXsyGPb71UYzKi8I-HweoFZqPBvLnAwfsmmDBwZVRTW-MXdh-Y=w72-h72-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Daniel Rompis</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The mentors are very kind, patient, and able to explain the material in an easy-to-understand manner. 
+                        The learning environment is also comfortable, making the learning process feel relaxed and enjoyable. <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">The material presented by Dialogika is very practical, light yet meaningful, 
+                          making it easy to understand and put into practice immediately. From this, I gained new experiences and
+                          valuable knowledge to improve my soft skills, especially in communication and self-confidence.
+                          Highly recommended for anyone who wants to grow with Dialogika! </span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjUpF8BCTYPpxylRqclEB-IZfFLDg2Sb044A-g8InQZYS-M-TSqA=w36-h36-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
                       <h3>Almaas Tifani</h3>
