--- a/index.html
+++ b/index.html
@@ -552,6 +552,32 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWOxpgmqsb6vF17k0sTe9FIkVnKB9RLt7A3Y6TEIDaIZhzA5cuW=w72-h72-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Valda Kustarini</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        I enjoyed studying in the basics plus dialogue class. The material was excellent, and there was plenty of room for practice. <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">I'll be more confident in public speaking in the future now that I've mastered the fundamentals.  </span><span class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjXFYvjhI1OdJV7CoPEc4IhHJH28p2uRZXpmM3u-xsUvYLIlETs=w72-h72-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-6" />
                       <h3>Quinza Aleysia Giselda Kurniawan</h3>
